--- a/package.json
+++ b/package.json
@@ -2,24 +2,31 @@
   "name": "maps-autocomplete",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
-    "typescript": "~3.7.2"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.3.2",
+    "@testing-library/user-event": "7.1.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-geosuggest": "2.12.1",
+    "react-google-maps": "9.4.5",
+    "react-scripts": "3.3.0",
+    "typescript": "~3.7.2"
+  },
+  "devDependencies": {
+    "@types/googlemaps": "3.39.1",
+    "@types/jest": "24.0.0",
+    "@types/markerclustererplus": "2.1.33",
+    "@types/node": "12.0.0",
+    "@types/react": "16.9.17",
+    "@types/react-dom": "16.9.0",
+    "@types/react-geosuggest": "2.7.10"
   },
   "eslintConfig": {
     "extends": "react-app"
